<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_trips"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_trips" />

    <item
        android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/nav_ai"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_ai" />

    <item
        android:id="@+id/nav_more"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/nav_more" />

</menu>
